# SMC

./: README.md
drafts/: README.txt
smc/: .gitattributes  .gitignore  Makefile.am  autogen.sh  configure.ac  configure.scan
